@@ -17,6 +17,8 @@
 
 # >----------------------------[ Initial Setup ]------------------------------<
 
+run 'bundle update'
+
 initializer 'generators.rb', <<-RUBY
 Rails.application.config.generators do |g|
 end
