@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "2.2.7"
+  VERSION = "2.2.8"
 end
