@@ -1,5 +1,15 @@
 h1. CHANGELOG
 
+h2. 2.2.8 September 7, 2012
+
+* run 'bundle update' before everything to avoid "already activated" gem issues
+* fix 'extras' recipe to resolve issues creating a project-specific rvm gemset
+* update gem 'haml-rails' from 0.3.4 to 0.3.5
+* update gem 'slim' from 1.2.2 to 1.3.0
+* update gem 'bootstrap-sass' from 2.0.4.0 to 2.1.0.0
+* update gem 'puma' from 1.6.2 to 1.6.3
+* update gem 'pg' from 0.14.0 to 0.14.1
+
 h2. 2.2.7 September 1, 2012
 
 * improve 'testing' recipe for better handling of RSpec 'spec/spec_helper.rb'
